@@ -1,7 +1,7 @@
 /*
  * ImageResourceUrl.java
  *
- * Copyright (C) 2009-19 by RStudio, PBC
+ * Copyright (C) 2020 by RStudio, PBC
  *
  * Unless you have received this program directly from RStudio pursuant
  * to the terms of a commercial license agreement with RStudio, then
@@ -27,7 +27,7 @@ public class ImageResourceUrl implements ImageResource
       width_ = width;
       height_ = height;
    }
-   
+
    @Override
    public String getName()
    {
@@ -84,9 +84,9 @@ public class ImageResourceUrl implements ImageResource
       sb.appendHtmlConstant("<img src=\"");
       sb.appendHtmlConstant(getSafeUri().asString());
       sb.appendHtmlConstant("\" width=\"");
-      sb.appendHtmlConstant(new Integer(getWidth()).toString());
+      sb.appendHtmlConstant(Integer.valueOf(getWidth()).toString());
       sb.appendHtmlConstant("\" height=\"");
-      sb.appendHtmlConstant(new Integer(getHeight()).toString());
+      sb.appendHtmlConstant(Integer.valueOf(getHeight()).toString());
       sb.appendHtmlConstant("\">");
 
       return sb.toSafeHtml();
