@@ -1,7 +1,7 @@
 /*
  * SelectWidget.java
  *
- * Copyright (C) 2009-19 by RStudio, PBC
+ * Copyright (C) 2020 by RStudio, PBC
  *
  * Unless you have received this program directly from RStudio pursuant
  * to the terms of a commercial license agreement with RStudio, then
@@ -14,6 +14,8 @@
  */
 package org.rstudio.core.client.widget;
 
+import com.google.gwt.aria.client.Id;
+import com.google.gwt.aria.client.Roles;
 import org.rstudio.core.client.StringUtil;
 import org.rstudio.core.client.theme.res.ThemeResources;
 
@@ -28,6 +30,7 @@ import com.google.gwt.user.client.ui.Panel;
 import com.google.gwt.user.client.ui.Widget;
 
 public class SelectWidget extends Composite
+                          implements CanSetControlId
 {
    public static String ExternalLabel = null;
 
@@ -35,17 +38,17 @@ public class SelectWidget extends Composite
    {
       this(ExternalLabel);
    }
-   
+
    public SelectWidget(String label)
    {
       this(label, null, false);
    }
-   
+
    public SelectWidget(String label, String[] options)
    {
       this(label, options, false);
    }
-   
+
    public SelectWidget(String label, String[] options, boolean listOnLeft)
    {
       this(label, options, null, false, true, listOnLeft);
@@ -58,7 +61,7 @@ public class SelectWidget extends Composite
    {
       this(label, options, values, isMultipleSelect, false, false);
    }
-   
+
    public SelectWidget(String label,
                        String[] options,
                        String[] values,
@@ -66,7 +69,7 @@ public class SelectWidget extends Composite
                        boolean horizontalLayout,
                        boolean listOnLeft)
    {
-      this(label, options, values, isMultipleSelect, 
+      this(label, options, values, isMultipleSelect,
            horizontalLayout, listOnLeft, false);
    }
 
@@ -102,7 +105,7 @@ public class SelectWidget extends Composite
          for (int i = 0; i < options.length; i++)
             listBox_.addItem(options[i], values[i]);
       }
-      
+
       Panel panel = null;
       if (horizontalLayout)
       {
@@ -144,58 +147,63 @@ public class SelectWidget extends Composite
          panel = flowPanel_;
          panel.add(listBox_);
       }
-      
+
       initWidget(panel);
-      
+
       if (fillContainer)
       {
          if (StringUtil.isNullOrEmpty(label))
             listBox_.setWidth("100%");
          horizontalPanel_.setWidth("100%");
       }
-      
+
       addStyleName(ThemeResources.INSTANCE.themeStyles().selectWidget());
    }
-   
+
    public HandlerRegistration addChangeHandler(ChangeHandler handler)
    {
       return listBox_.addChangeHandler(handler);
+   }
+
+   public FormLabel getLabel()
+   {
+      return label_;
    }
 
    public ListBox getListBox()
    {
       return listBox_;
    }
-   
+
    public void setLabel(String label)
    {
       label_.setText(label);
    }
-   
+
    public void setChoices(String[] options)
    {
       setChoices(options, options);
    }
-   
+
    public void setChoices(String[] options, String[] values)
-   {   
+   {
       listBox_.clear();
       for (int i = 0; i < options.length; i++)
          addChoice(options[i], values[i]);
-      
+
       selectFirstItem();
    }
-   
+
    public void addChoice(String option)
    {
       addChoice(option, option);
    }
-   
+
    public void addChoice(String option, String value)
    {
       listBox_.addItem(option, value);
    }
-   
+
    public void selectFirstItem()
    {
       if (listBox_.getItemCount() > 0)
@@ -234,19 +242,19 @@ public class SelectWidget extends Composite
    {
       return Integer.parseInt(getValue());
    }
-   
+
    public void setIntValue(int value)
    {
-      setValue(new Integer(value).toString());
+      setValue(Integer.valueOf(value).toString());
    }
-   
+
    public void addWidget(Widget widget)
    {
       if (horizontalPanel_ != null)
       {
          horizontalPanel_.add(widget);
          horizontalPanel_.setCellVerticalAlignment(
-               widget, 
+               widget,
                HasVerticalAlignment.ALIGN_MIDDLE);
       }
       else
@@ -259,7 +267,19 @@ public class SelectWidget extends Composite
    {
       listBox_.insertItem(label, value, index);
    }
-   
+
+   @Override
+   public void setElementId(String id)
+   {
+      listBox_.getElement().setId(id);
+      label_.setFor(id);
+   }
+
+   public void setDescribedBy(String id)
+   {
+      Roles.getListboxRole().setAriaDescribedbyProperty(listBox_.getElement(), Id.of(id));
+   }
+
    private HorizontalPanel horizontalPanel_ = null;
    private FlowPanel flowPanel_ = null;
    private FormLabel label_ = null;
